--- a/chrome-ext/index.html
+++ b/chrome-ext/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- Removed invalid entry script: project uses popup/main.ts under src/popup. 
+      Keeping this HTML file for informational/demo purposes. -->
   </body>
 </html>
