--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
     <title>CoolBeans</title>
   </head>
   <body>
+    <link rel="stylesheet" href="/src/popup.css" />
     <div id="root"></div>
     <script type="module" src="/src/popup.tsx"></script>
   </body>
