--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CoolBeans</title>
+    <title>MindFeed</title>
+  <link rel="icon" href="/icons/favicon-96x96.png" />
   </head>
   <body>
     <link rel="stylesheet" href="/src/popup.css" />
